--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We create websites, we bring your to life."
     />
     <link
     rel="stylesheet"
@@ -16,7 +16,6 @@
     <title>Nerva</title>
   </head>
   <body>
-    <noscript></noscript>
     <div id="root"></div>
    
   </body>
